CAP-430 fix z-index filter expands

--- a/app/design/frontend/X247Commerce/Cakebox/Magento_Catalog/web/css/source/_product.less
+++ b/app/design/frontend/X247Commerce/Cakebox/Magento_Catalog/web/css/source/_product.less
@@ -431,6 +431,11 @@
 			}
 		}
 	}
+	.page-products {
+		.columns{
+			z-index: 3;
+		}
+	}
 }
 
 //
